--- a/tradingProject/frontend/src/styles.css
+++ b/tradingProject/frontend/src/styles.css
@@ -1,66 +1,116 @@
-/* styles.css */
-
-body {
-  background-color: #ffffff;
-  color: #484848;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 10px;
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+  font-family: 'Arial', sans-serif;
 }
 
 .header {
-  text-align: center;
-  margin-bottom: 30px;
-  font-size: 2.2em;
+  position: fixed;
+  top: 0;  
+  width: 100%;
+  background-color: #333;
+  padding: 10px 0;
+  color: #ffffff;
+  z-index: 10;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .title {
-  color: #FF5A5F;
+  font-size: 1.8em;
+  margin: 0;
+  color: #f9f9f9;
+}
+
+.navigation {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navigation li:not(:last-child) {
+  margin-right: 10px;
 }
 
 button {
-  background-color: #FF5A5F;
+  background-color: transparent;
   color: #ffffff;
   border: none;
-  padding: 15px 30px;
-  margin: 20px 0;
+  padding: 5px 10px;
   font-size: 1em;
-  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 button:hover {
-  background-color: #FF2B2E;
+  color: #f9f9f9;
+}
+
+.App {
+  display: flex;
+  padding-top: 60px;
 }
 
 .content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 15px;
+  display: flex;
+  margin-top: 20px;
+  width: 100%;
 }
 
-.post {
-  border: 1px solid #dddddd;
-  padding: 10px;
-  border-radius: 4px;
+.left-panel {
+  flex: 1;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin-right: 20px;
+  padding: 20px;
 }
 
-.post-title {
-  color: #FF5A5F;
-  margin-bottom: 10px;
+.right-panel {
+  flex: 2;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
-.nested-list {
-  padding-left: 20px;
+
+.account-data {
+  background-color: #fff;
+  padding: 20px;
 }
 
-.nested-key {
-  color: #FF5A5F;
+.account-data-header {
+  font-size: 1.8em;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+
+.trading-data {
+  background-color: #fff;
+  padding: 20px;
+}
+
+.trading-data-header {
+  font-size: 1.8em;
+  color: #333;
+  margin-bottom: 20px;
 }
 
 .trading-list {
@@ -68,6 +118,24 @@ button:hover {
   padding-left: 0;
 }
 
-.data-key {
-  color: #FF5A5F;
+.data-key, .nested-key {
+  font-weight: bold;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #ffba00;
+  color: #4b4b4b;
+  padding: 10px 20px;
+}
+
+.footer-left,
+.footer-right {
+  font-size: 1.2em;
 }
